# graphsense-lib

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  1Archive1n2C579dMsAu3iC6tWzuQJz8dN_to_Coinbase.gs  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.transformation  LICENSE  Makefile  README.md  README_tagpacks.md  VERSIONING.md  asd.csv  pyproject.toml  setup.cfg  setup.py  tester.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: create-downstream-pr.yml  docker-build.yml  github-packages-publish.yaml  pypi-publish-client.yaml  pypi-publish-clustering.yaml  pypi-publish.yaml  python-examples.yml  release.yaml  run_tests.yaml  run_tests_client.yaml
clients/python/: .gitignore  .openapi-generator-ignore  CLAUDE.md  Makefile  README.md  README_CLI.md  README_EXT.md  pyproject.toml  test_examples.py
clients/python-compat/: README.md  patch_compat.py
docs/: CONFIG_MIGRATION.md
docs/tagpacks/: README.md
instance/: config.yaml.template
rust/gs_clustering/: Cargo.toml  README.md  pyproject.toml
rust/gs_clustering/src/: clustering.rs  lib.rs  unionfind.rs
scripts/: backfill_trx_is_contract.py  check_semver_versions.py  convert_openapi_31_to_30.py  dev-ingest.sh  generate_openapi_spec.py  pack_spark_env.sh  profile_ingest.py
scripts/pubkey/: README.md  backfill.sh  diff.py  diff_observed.py  inspect_sink.py  probe_absent_onchain.py  profile_legacy.py  profile_legacy_driver.py  validate_account_fieldmap.py
scripts/test-data-gen/: generate_ecrecover_test_dataset.py
src/graphsenselib/: __init__.py
src/tagpack/: __init__.py  actorpack.py  cli.py  cmd_utils.py  graphsense.py  tagpack.py  tagstore.py
tagpack/: .env.example  docker-compose.yml  integration_test.sh
tagpack/admin-ui/: package-lock.json  package.json
tagpack/docs/: README.md
tests/: conftest.py  helpers.py  test_btc.py  test_fast_btc.py  test_fast_rpc.py  test_fast_traces.py  test_rpc.py  test_tagstore_config.py  test_traces.py
tests/cli/: test_common.py  test_mcp_cli_integration.py  test_web_cli_integration.py
tests/clustering/: test_clustering.py
tests/config/: conftest.py  test_cassandra_async_config.py  test_chain_forks.py  test_cli_show.py  test_config.py  test_env_var_resolution.py  test_full_transform_args.py  test_settings.py
tests/datatypes/: test_addresses.py
tests/db/: helpers.py  test_address_model_fresh_cluster_id.py  test_addresses_service.py  test_blocks_service_date_range.py  test_cassandra.py  test_cassandra_async.py  test_common.py  test_comparison_service.py  test_datetime_alignment.py  test_find_highest_block_with_exchange_rates.py  test_fresh_address_entity_resolution.py  test_fresh_cluster_id_lookup.py  test_fresh_cluster_read_switch.py  test_fresh_clustering_marker_read.py  test_fresh_degree_legacy_hop.py  test_fresh_entity_addresses_singleton.py  test_fresh_list_entities_singletons.py  test_fresh_pending_stats_synthesis.py  test_fresh_singleton_entity.py  test_graph_service.py  test_heuristics.py  test_keyspace_discovery.py  test_links_net_filter.py  test_parallel.py  test_search_unicode_ligature.py  test_subgraph_service.py  test_tags_fresh_cluster_lookup.py  test_txs_service.py  test_utxo_tx_id_allocator.py
tests/deltaupdate/: test_accountupdate.py  test_createchanges.py  test_data.py  test_fresh_clustering.py  test_parallelio.py  test_utxo_parallelio.py  test_utxoupdate.py  test_wal.py
tests/ingest/: test_address_normalization.py  test_cli_flags.py  test_coinjoin.py  test_deltatable_write.py  test_dual_sink.py  test_parquet_prep_witness.py  test_parse_script_native.py  test_pubkey_address_version_parity.py  test_scriptparsing.py  test_sink_catchup.py  test_source.py
tests/integration/: test_run.py
tests/mcp/: conftest.py  test_config.py  test_consolidated.py  test_curation.py  test_error_logging.py  test_pathfinder_export.py  test_route_filter.py  test_search_neighbors.py  test_server_integration.py  test_slim.py
tests/pathfinder/: test_verify_backend.py  test_verify_structural.py
tests/pubkey/: test_extract_account.py  test_extract_utxo.py  test_job_start_block.py
tests/rates/: test_rates.py  test_token_rates.py
tests/regressions/: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
tests/schema/: test_apply_migrations.py  test_create_keyspace_overrides.py  test_schema.py
tests/tagpack/: test_actor_id_validation.py  test_actor_validation.py  test_actorpack.py  test_actorpack_schema.py  test_cluster_mapping_dangling_ref.py  test_cluster_mapping_dual_write.py  test_cluster_mapping_write_switch.py  test_cluster_staleness.py  test_concept_mapping.py  test_constants.py  test_fast_yaml.py  test_fresh_feeder_singleton_batch.py  test_git_commit_times.py  test_main.py  test_sync_repo.py  test_tagpack.py  test_tagpack_schema.py  test_utils.py
tests/tagpacktool/: config.yaml  test_actorpack.py  test_tagDigest.py  test_tagpack.py  test_tagstore.py
tests/tagstore/: test_cluster_id_routing.py  test_cluster_view_switch.py  test_database.py  test_tagDigest.py  test_tagstore.py  test_tagstore_config.py
tests/transformation/: conftest.py  test_account_shared.py  test_account_transform.py  test_account_trx_transform.py  test_cluster_stats.py  test_copy_exchange_rates.py  test_delta_to_raw_cli.py  test_mapping_min.py  test_mapping_relabel.py  test_multi_input_edges.py  test_run_clustering_cli.py  test_run_full_transform_cli.py  test_sidecar.py  test_spark_jar.py  test_top_untagged_addresses.py  test_utxo_address_normalization.py  test_utxo_cql_int_widths.py  test_utxo_extra_fields.py  test_utxo_sidecar_writer.py  test_utxo_witness_healing.py
tests/utils/: test_address.py  test_bch_legacy_address_conversion.py  test_bitcoin.py  test_cassandra_utils.py  test_date.py  test_delta_table_connector.py  test_function_call_parser.py  test_generic.py  test_locking.py  test_pipeline.py  test_pubkey_to_address.py  test_signature.py  test_tablecache.py  test_thorchain_fallback.py  test_transactions.py  test_tron_address_conversion.py  test_tx_id.py  test_utils.py  test_utxo_address_lean_import.py
tests/web/: __init__.py  (+37 more)
(+849 files in other folders)
